// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner component renders correctly with profile image 1`] = `
<DocumentFragment>
  <header
    class="banner"
    style="background-image: url(/background.png);"
  >
    <img
      alt="profile"
      class="banner__profile"
      src="/profile.png"
    />
    <div
      class="banner__text"
    >
      <div
        class="banner__intro"
      >
        // hello world
      </div>
      <h1
        class="banner__name"
      >
        I'm Martin Blackburn
      </h1>
    </div>
  </header>
</DocumentFragment>
`;

exports[`Banner component renders correctly without profile image 1`] = `
<DocumentFragment>
  <header
    class="banner"
    style="background-image: url(/background.png);"
  >
    <div
      class="banner__text"
    >
      <div
        class="banner__intro"
      >
        // hello world
      </div>
      <h1
        class="banner__name"
      >
        I'm Martin Blackburn
      </h1>
    </div>
  </header>
</DocumentFragment>
`;
